--- a/public/index.html
+++ b/public/index.html
@@ -18,19 +18,6 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 </head>
 <body>
-
-<!--
-		<nav>
-			<div class="nav-wrapper">
-				<a href="#" class="brand-logo">Loops w/ Friends</a>
-				<ul id="nav-mobile" class="right hide-on-small-and-down">
-					<li><a href="sass.html">MY STATIONS</a></li>
-					<li><a href="sass.html">NEW STATION</a></li>
-					<li><a href="badges.html">SIGN IN/OUT</a></li>
-				</ul>
-			</div>
-		</nav>
--->
     
     <nav>
 			<div class="nav-wrapper">
@@ -56,16 +43,9 @@
     	<div class="row panel" id="control-panel">
 				<div class="col s4 knob-global">GLOBAL I/O</div>
 				<div class="col s4 knob-global">TEMPO</div>
-				<div class="col s4 knob-global">TEMPO</div> button-global
+				<div class="col s4 knob-global">TEMPO</div>
 				<div class="col s12" id="on-off-panel">
-					<button class="btn-large button-on-off">KICK</button>
-					<button class="btn-large button-on-off">KICK</button>
-					<button class="btn-large button-on-off">KICK</button>
-					<button class="btn-large button-on-off">KICK</button>
-					<button class="btn-large button-on-off">KICK</button>
-					<button class="btn-large button-on-off">KICK</button>
-					<button class="btn-large button-on-off">KICK</button>
-					<button class="btn-large button-on-off">KICK</button>
+					<button ng-repeat="instrument in inst.instruments" class="btn button-on-off" ng-click="instrument.muted = !instrument.muted">{{ instrument.name }}</button>
 				</div>
     	</div>
 		
@@ -77,7 +57,7 @@
 						<div class="col s4">HIDE</div>
 					</div>
 					<div class="step-panel">
-						<div class="step" ng-repeat="step in instrument.steps" id="">X</div>
+						<div class="step" ng-repeat="step in instrument.steps" id="{{step.id}}">X</div>
 					</div>
 				</div>
     	</div>
